--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -7,14 +7,6 @@ RUN apt-get update
 
 RUN apt-get -y install curl
 
-RUN pip install vllm==0.5.4
-
-RUN pip install aiofiles peft transformers==4.43.4 trl datasets==2.20.0 accelerate==0.32.0
-
-RUN pip install python-multipart sse_starlette
-
-RUN pip install chromadb sentence_transformers
-
 ENV NVM_DIR /usr/local/nvm
 ENV NODE_VERSION 20.14.0
 
@@ -28,8 +20,26 @@ RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | b
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
+RUN pip install python-multipart sse_starlette
+
+RUN pip install chromadb sentence_transformers
+
+RUN pip install vllm==0.5.5
+
+RUN pip install aiofiles peft trl datasets accelerate
+
 ARG WORK_DIR=/usr/share/xinhai
 
-RUN mkdir ${WORK_DIR}
+RUN mkdir -p ${WORK_DIR}
+
+COPY --from=root related_repos/  ${WORK_DIR}/related_repos
+
+WORKDIR ${WORK_DIR}/related_repos/transformers
+RUN pip install -e .
+
+WORKDIR ${WORK_DIR}/related_repos/LLaMA-Factory
+RUN pip install -e .
+
+RUN pip install timm==0.9.10
 
 WORKDIR ${WORK_DIR}/backend/src
