--- a/examples/PsyTraArena/configs/psyschool_4players_zh.yaml
+++ b/examples/PsyTraArena/configs/psyschool_4players_zh.yaml
@@ -49,23 +49,38 @@ arena:
       请根据之前的对话摘要和新的对话内容，给出新的对话摘要。
       新的对话摘要应当包含之前摘要的内容。
       摘要长度不应过长或过短，应该根据之前对话摘要和对话内容而定。
-      ####
-      以前的对话摘要：{chat_summary}
+      ####以前的对话摘要：
+      {chat_summary}
       
-      ####
-      新的对话内容：{chat_history}
+      ####新的对话内容：
+      {chat_history}
       
       ###Attention###
       直接返回新的对话摘要内容，不要返回分析过程！
     reflect_prompt: &reflect_prompt |-
-      请根据下面给出的对话历史，从学生视角将学习到的重要内容进行经验性总结与反思，包括但不局限于心理学概念、知识点、案例分析、具体题目等。
-      你的反思内容长度不应过长或过短，应该根据之前具体对话历史内容而定。
+      ##任务：
+      请以学生李雷的视角，从下面给出的对话历史中分点提炼出【所有】关键知识，包括但不局限于心理学概念、知识点、案例分析、具体题目分析等。之后，请根据提炼的内容进行反思形成有价值的经验。
 
-      ####
-      对话历史：{chat_history}
+      ##对话历史：
+      {chat_history}
       
-      ###Attention###
-      直接返回你的总结反思内容，不要返回分析过程！
+      ##注意：
+      你提炼的知识点应尽量具体。
+      直接返回你总结的经验：
+    reflect_with_experience_prompt: &reflect_w_exp_prompt |-
+      ##任务：
+      请以学生李雷的视角，从下面给出的对话历史中分点提炼出【所有】关键知识，包括但不局限于心理学概念、知识点、案例分析、具体题目分析等。之后，请根据提炼的内容进行反思形成有价值的经验。
+      如果以往的经验对你的本次反思具有帮助，你可以将其作为参考。
+      
+      ##对话历史：
+      {chat_history}
+      
+      ##你以往的经验：
+      {past_exp}
+
+      ##注意：
+      你提炼的知识点应尽量具体。
+      直接返回你总结的经验：
     task_prompt: &task_prompt |-
       ##角色描述：
         {role_description}
@@ -84,6 +99,8 @@ arena:
       
       现在，你正在以{routing}方式与以下智能体通信: {agents}
       请你根据当前的环境状态，基于对话历史信息和参考信息，给出⼀条符合语境且遵循指令的回复。你想发出的消息内容是：
+  id_template: &id_template |-
+    {id:016d}
   llm: &llm
     Qwen/Qwen2-72B-Instruct
   api_key: &api_key
@@ -93,7 +110,7 @@ arena:
   name: XinHai PsyTraArena
 
   environment:
-    environment_id: psychool_4p_zh_20240818
+    environment_id: psyschool_4p_zh_20240908
     environment_type: stage
     controller_address: *controller_addr
     topology:
@@ -104,9 +121,10 @@ arena:
           - 0->1
           - 1->0
         start: 1
-        budget: 10
+        budget: 8
         ref_info:
-          - 1->retrieve->ProDB[knowledge]->cross_turn_info
+          - 0->recall->long_term_memory[storage]->last_message->no_cache
+          - 1->retrieve->ProDB[knowledge]->cross_turn_info->use_cache
       test:
         status:
           考场，用于进行心理学知识测试
@@ -116,9 +134,9 @@ arena:
         start: 2
         budget: 4
         ref_info:
-          - 0->recall->long_term_memory[storage]->last_message
-          - 2->retrieve->CPsyExamDB[feedback]->cross_turn_info
-        iter_num: 2
+          - 0->recall->long_term_memory[storage]->last_message->use_cache
+          - 2->retrieve->CPsyExamDB[feedback]->cross_turn_info->use_cache
+        iter_num: 5
       schedule:
         status:
           教研室，用于讨论后续课程安排
@@ -132,8 +150,8 @@ arena:
         start: 2
         budget: 3
         ref_info:
-          - 3->retrieve->Catalogs[knowledge]->[all]
-    max_turns: 10
+          - 3->retrieve->Catalogs[knowledge]->[all]->use_cache
+    max_turns: 50
 
   agents:
     - agent_type: school
@@ -152,9 +170,10 @@ arena:
       env_role: 李雷，一名对心理学感兴趣的学生。
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
-      reflect_prompt_template: *reflect_prompt
+      reflect_prompt_template: *reflect_w_exp_prompt
       prompt_template: *task_prompt
-      summary_mode: reflect
+      id_template: *id_template
+      summary_mode: reflect_w_exp
       locale: zh
       allowed_routing_types: *allowed_routing_types
       static_routing: True
@@ -171,7 +190,6 @@ arena:
         (1) 对教案中给出的概念、具体知识点和重要内容进行完整地传授。
         (2) 引导学生对学习内容进行反思与提问，和学生就问题进行讨论。
         (3) 根据教案内容构建具体案例进行讲解，加深学生对知识点的理解。
-        (4) 总结本次课的内容作为结语。
         注意：作为一名教师，你需要掌控课堂的节奏。尽量覆盖教案中的全部重要内容，并将一次课堂控制在5轮对话以内。
         [任务描述1-结束]
         [任务描述2-开始]
@@ -182,6 +200,7 @@ arena:
       summary_prompt_template: *summary_prompt
       reflect_prompt_template: *reflect_prompt
       prompt_template: *task_prompt
+      id_template: *id_template
       summary_mode: full
       locale: zh
       allowed_routing_types: *allowed_routing_types
@@ -196,8 +215,8 @@ arena:
         你是张明，一名专业的心理学测试考官，正在名为PsySchool的心理培训学校进行活动，你需要根据所处环境执行不同的任务：
         [任务描述1-开始]
         当你身处[考场]，你需要：
-        - 在第1轮，将给定题目不经任何修改地、完整地呈现给学生，并引导他/她进行作答，不要进行答案提示或泄露任何解题线索。
-        - 在第2轮，收到学生的答案后，你要根据给定的标答判断学生是否作答正确。如果学生回答错误/不完整，你需要告知学生正确答案并根据题解进行分析。
+        - 在第1轮，将参考信息中给定的题目完整地、不经任何修改地呈现给学生，并引导他/她进行作答，不要进行答案提示或泄露任何解题线索。
+        - 在第2轮，收到学生的答案后，你要根据给定的标准答案判断学生是否作答正确。如果学生的回答有错误、不完整，或包含答案以外的选项，你需要告知学生正确答案并根据题解进行纠正分析。
         [任务描述1-结束]
         [任务描述2-开始]
         当你身处[教研室]，你需要和教师、课程规划者一起讨论，根据学生的考试情况决定接下来的课程安排。具体地，你需要分析学生的历史考试记录，并以此作为依据进行后续讨论：
@@ -210,6 +229,7 @@ arena:
       summary_prompt_template: *summary_prompt
       reflect_prompt_template: *reflect_prompt
       prompt_template: *task_prompt
+      id_template: *id_template
       summary_mode: full
       locale: zh
       allowed_routing_types: *allowed_routing_types
@@ -232,6 +252,7 @@ arena:
       summary_prompt_template: *summary_prompt
       reflect_prompt_template: *reflect_prompt
       prompt_template: *task_prompt
+      id_template: *id_template
       summary_mode: full
       locale: zh
       allowed_routing_types: *allowed_routing_types
