--- a/frontend/docker/Dockerfile
+++ b/frontend/docker/Dockerfile
@@ -20,26 +20,8 @@ RUN curl https://raw.githubusercontent.com/creationix/nvm/v0.30.1/install.sh | b
 ENV NODE_PATH $NVM_DIR/v$NODE_VERSION/lib/node_modules
 ENV PATH      $NVM_DIR/versions/node/v$NODE_VERSION/bin:$PATH
 
-RUN pip install python-multipart sse_starlette
-
-RUN pip install chromadb sentence_transformers
-
-RUN pip install vllm==0.5.5
-
-RUN pip install aiofiles peft trl datasets accelerate
-
 ARG WORK_DIR=/usr/share/xinhai
 
 RUN mkdir -p ${WORK_DIR}
 
-COPY --from=root related_repos/  ${WORK_DIR}/related_repos
-
-WORKDIR ${WORK_DIR}/related_repos/transformers
-RUN pip install -e .
-
-WORKDIR ${WORK_DIR}/related_repos/LLaMA-Factory
-RUN pip install -e .
-
-RUN pip install timm==0.9.10
-
-WORKDIR ${WORK_DIR}/backend/src
+WORKDIR ${WORK_DIR}/frontend
