--- a/examples/CBTAgency/configs/xinhai_cbt_agency.yaml
+++ b/examples/CBTAgency/configs/xinhai_cbt_agency.yaml
@@ -91,38 +91,39 @@ arena:
   name: XinHai CBT
 
   environment:
-    environment_type: simple
+    environment_type: agency
     environment_id: xinhai_cbt_simulation_0
-    controller_address: http://localhost:5000
-    topology:
-      edges:
-        - 0->1
-        - 1->0
-        - 1->2
-        - 1->3
-        - 1->4
-        - 1->5
-        - 1->6
-        - 2->1
-        - 3->1
-        - 4->1
-        - 5->1
-        - 6->1
-    max_turns: 10
+    controller_address: http://controller:5000
+    topologies:
+      - type: agency
+        name: cbt
+        start: 0
+        max_turns: 10
+        edges:
+          - 0->1
+          - 1->0
+          - 1->2
+          - 1->3
+          - 1->4
+          - 1->5
+          - 1->6
+          - 2->1
+          - 3->1
+          - 4->1
+          - 5->1
+          - 6->1
 
   agents:
-    - agent_type: simple
+    - agent_type: proxy
       agent_id: 0
       name: 咨询者
-      role_description: 咨询者，面临以下心理问题：“察觉到一种模式，我总喜欢自己检讨、批评自己？”，具体如下：“我和我妈妈讲话会陷入一种很恶心的模式。我只要说遇到的烦恼她是无动于衷的，但是我一旦开始批评自我检讨，她就面露喜色。我觉得我已经不好办了，回想发现见人就自我检讨，觉得自己不是这里不足就是那里不足，再假假的夸两句别人，已经成为我的一种模式了，但这不正常的，苦恼”
+      role_description: 咨询者，面临心理问题
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
       prompt_template: *consultant_prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 1
       name: 咨询师
@@ -133,8 +134,6 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 2
       name: 督导师1
@@ -145,8 +144,6 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 3
       name: 督导师2
@@ -157,8 +154,6 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 4
       name: 督导师3
@@ -169,8 +164,6 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 5
       name: 督导师4
@@ -181,8 +174,6 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
     - agent_type: simple
       agent_id: 6
       name: 督导师5
@@ -193,5 +184,3 @@ arena:
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
-      api_key: EMPTY
-      api_base: http://localhost:40001/v1
