--- a/examples/AutoCBT/docker-compose.yml
+++ b/examples/AutoCBT/docker-compose.yml
@@ -6,16 +6,16 @@ services:
     volumes:
       - ../../backend:/usr/share/xinhai/backend
     ports:
-      - 8080:8080
-      - ${CONTROLLER_PORT}:${CONTROLLER_PORT}
+      - ${FRONTEND_PORT}:8080
+      - ${CONTROLLER_PORT}:5000
     environment:
       PYTHONPATH: /usr/share/xinhai/backend/src
-    command: python -m xinhai.controller --host ${CONTROLLER_HOST} --port ${CONTROLLER_PORT}
+    command: python -m xinhai.controller --host 0.0.0.0 --port 5000
     healthcheck:
       test:
         [
           "CMD", "curl", "--fail", "-s", "-X", "POST", "-H", "Content-Type: application/json", "-d", "{}",
-          "http://localhost:${CONTROLLER_PORT}/api/list_models",
+          "http://localhost:5000/api/list_models",
         ]
       interval: 10s
       timeout: 10s
@@ -36,7 +36,7 @@ services:
       - ../../backend:/usr/share/xinhai/backend
       - pretrained_models:/usr/share/xinhai/pretrained_models
     environment:
-      CONTROLLER_ADDRESS: http://controller:${CONTROLLER_PORT}
+      CONTROLLER_ADDRESS: http://controller:5000
       MODEL_NAME: storage
       WORKER_ADDRESS: http://storage:${STORAGE_WORKER_PORT}
       WORKER_HOST: 0.0.0.0
@@ -103,7 +103,7 @@ services:
       - ../../backend:/usr/share/xinhai/backend
     environment:
       PYTHONPATH: /usr/share/xinhai/backend/src
-      CONTROLLER_ADDRESS: http://controller:${CONTROLLER_PORT}
+      CONTROLLER_ADDRESS: http://controller:5000
       MODEL_NAME: ${BRIDGE_MODEL_NAME}
       WORKER_ADDRESS: http://llm_bridge:${BRIDGE_WORKER_PORT}
       WORKER_HOST: 0.0.0.0
