--- a/examples/CBTAgency/.env.example
+++ b/examples/CBTAgency/.env.example
@@ -1,6 +1,8 @@
 CONTROLLER_HOST=0.0.0.0
 CONTROLLER_PORT=5000
 
+FRONTEND_PORT=8080
+
 OCR_WORKER_PORT=40000
 LLM_WORKER_PORT=40001
 MLLM_WORKER_PORT=40002
