--- a/examples/CBTAgency/configs/xinhai_cbt_agency.yaml
+++ b/examples/CBTAgency/configs/xinhai_cbt_agency.yaml
@@ -55,21 +55,6 @@ arena:
       
       ###Attention###
       仅返回新的对话摘要内容，不要返回分析过程！
-    consultant_prompt: &consultant_prompt |-
-      角色描述：
-          {role_description}
-      
-      对话历史摘要：
-          {chat_summary}
-      
-      最新对话历史：
-          {chat_history}
-      
-      现在，你选择了以{routing}方式与以下智能体通信:
-      {agents}
-      
-      现在需要请求咨询师的帮助，请配合咨询师的询问，提供所需信息。
-      请问你想发出的消息内容是什么？
     prompt: &prompt |-
       请你基于咨询者的信息，给出⼀条专业的，富有同情⼼和具有助益性的回复。确保你的回复在保持以下认知⾏为疗法回答结构的基础上，尤其是识别关键思维或信念部分，流畅地将各部分内容相互连接：
       1. 验证和共情：对患者的情感或问题表示理解和同情，创建安全感。
@@ -78,15 +63,16 @@ arena:
       4. 提供策略或⻅解：提供实⽤策略或⻅解，以帮助他们处理当前情况。
       5. ⿎励与前瞻：⿎励患者使⽤策略，强调这只是开始，并可能需要进⼀步的⽀持。
       
-      角色描述：{role_description}
+      【角色描述】
+          {role_description}
       
-      对话历史摘要：
+      【对话历史摘要】
           {chat_summary}
       
-      最新对话历史：
+      【最新对话历史】
           {chat_history}
       
-      现在，你选择了以{routing}方式与{agents}通信，请问你想发出的消息内容是什么？
+      现在，你选择了以{routing_type}方式与{target_agent_names}通信，请问你想发出的消息内容是什么？
 
   name: XinHai CBT
 
@@ -120,7 +106,7 @@ arena:
       role_description: 咨询者，面临心理问题
       routing_prompt_template: *routing_prompt
       summary_prompt_template: *summary_prompt
-      prompt_template: *consultant_prompt
+      prompt_template: *prompt
       locale: zh
       allowed_routing_types: *allowed_routing_types
       llm: Qwen1.5-7B-Chat
