Change routing messsage and message extraction

--- a/examples/CBTAgency/.env.example
+++ b/examples/CBTAgency/.env.example
@@ -22,8 +22,8 @@ STORAGE_DEVICE=0
 STORAGE_DB_PATH=StorageDB-bge-1.5-300
 STORAGE_EMBEDDING_MODEL_PATH=bge-large-zh-v1.5
 
-LLM_MODEL_PATH=Qwen1.5-7B-Chat
-LLM_MODEL_NAME=Qwen1.5-7B-Chat
+LLM_MODEL_PATH=Qwen2.5-7B-Instruct
+LLM_MODEL_NAME=Qwen2.5-7B-Instruct
 LLM_MODEL_TEMPLATE=qwen
 
 #BRIDGE_API_KEY=sk-xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
