--- a/examples/Chatdev/configs/xinhai_Chatdev.yaml
+++ b/examples/Chatdev/configs/xinhai_Chatdev.yaml
@@ -6,30 +6,30 @@ arena:
   id_template: &id_template |-
     {id:016d}
   prompts:
-    # routing_prompt: &routing_prompt |-
-    #   ## 现在，你正在扮演虚拟世界中的{agent_name}。你需要基于自己和其他人物的关联关系做出反应。目前，已知的信息如下：
+    routing_prompt: &routing_prompt |-
+      ## 现在，你正在扮演虚拟世界中的{agent_name}。你需要基于自己和其他人物的关联关系做出反应。目前，已知的信息如下：
       
-    #   ### 你作为{agent_name}的角色描述：
-    #   {role_description}
+      ### 你作为{agent_name}的角色描述：
+      {role_description}
       
-    #   ### 你作为{agent_name}与其他人物的历史对话摘要：
-    #   {chat_summary}
+      ### 你作为{agent_name}与其他人物的历史对话摘要：
+      {chat_summary}
       
-    #   ### 你作为{agent_name}与其他人物的最新对话历史：
-    #   {chat_history}
+      ### 你作为{agent_name}与其他人物的最新对话历史：
+      {chat_history}
       
-    #   ### 你作为{agent_name}可以与之进行交互的人物列表：
-    #   {agent_descriptions}
+      ### 你作为{agent_name}可以与之进行交互的人物列表：
+      {agent_descriptions}
       
-    #   ### 你作为{agent_name}可以采用的通讯方式有：
-    #   {routing_descriptions}
+      ### 你作为{agent_name}可以采用的通讯方式有：
+      {routing_descriptions}
       
-    #   ## 基于当前情况，请你选择合适的通讯目标和通讯方式。如果你不知道怎么处理输出，请参考如下的输出格式，输出你的Routing策略：
-    #   {{"method": "[Multicast]", "target": [2,3,4,5,6]}}
-    #   {{"method": "[Unicast]", "target": [0]}}
+      ## 基于当前情况，请你选择合适的通讯目标和通讯方式。如果你不知道怎么处理输出，请参考如下的输出格式，输出你的Routing策略：
+      {{"method": "[Multicast]", "target": [2,3,4,5,6]}}
+      {{"method": "[Unicast]", "target": [0]}}
 
-    #   ##Attention##
-    #   现在，基于以上信息和参考输出格式，你的Routing策略是什么？
+      ##Attention##
+      现在，基于以上信息和参考输出格式，你的Routing策略是什么？
     summary_prompt: &summary_prompt |-
       ## 请根据之前的对话摘要和新的对话内容，给出新的对话摘要。 新的对话摘要应当包含之前摘要的内容。 摘要长度不应过长或过短，应该根据之前对话摘要和对话内容而定。目前，已知的信息如下：
       
@@ -41,49 +41,49 @@ arena:
       
       ##Attention##
       仅返回新的对话摘要内容，不要返回分析过程！
-    # consultant_prompt: &consultant_prompt |-
-    #   ## 你正在扮演虚拟世界中一名被心理问题所苦恼的咨询者，你在向面前的心理咨询师请求帮助。以下是你所苦恼的具体的心理问题：
-    #   {role_description}
+    consultant_prompt: &consultant_prompt |-
+      ## 你正在扮演虚拟世界中一名被心理问题所苦恼的咨询者，你在向面前的心理咨询师请求帮助。以下是你所苦恼的具体的心理问题：
+      {role_description}
       
-    #   ##Attention##
-    #   现在，你基于一名被心理问题苦恼的咨询者的身份，为了寻求心理咨询师的帮助，请原封不动地、详尽地、向心理咨询师讲述你的心理问题。
-    # prompt: &prompt |-
-    #   ##Attention##
-    #   请你基于咨询者的信息，给出一条专业的，富有同情心和具有助益性的回复。确保你的回复在保持以下认知行为疗法回答结构的基础上，尤其是识别关键思维或信念部分，流畅地将各部分内容相互连接：
-    #   1. 验证和共情：对患者的情感或问题表示理解和同情，创建安全感。
-    #   2. 识别关键思维或信念：通过问题描述，找出可能的认知扭曲或核心信仰。
-    #   3. 提出挑战或反思：提出开放性问题，鼓励患者重新考虑或反思其初始思维或信仰。
-    #   4. 提供策略或见解：提供实用策略或见解，以帮助他们处理当前情况。
-    #   5. 鼓励与前瞻：鼓励患者使用策略，强调这只是开始，并可能需要进一步的支持。
+      ##Attention##
+      现在，你基于一名被心理问题苦恼的咨询者的身份，为了寻求心理咨询师的帮助，请原封不动地、详尽地、向心理咨询师讲述你的心理问题。
+    prompt: &prompt |-
+      ##Attention##
+      请你基于咨询者的信息，给出一条专业的，富有同情心和具有助益性的回复。确保你的回复在保持以下认知行为疗法回答结构的基础上，尤其是识别关键思维或信念部分，流畅地将各部分内容相互连接：
+      1. 验证和共情：对患者的情感或问题表示理解和同情，创建安全感。
+      2. 识别关键思维或信念：通过问题描述，找出可能的认知扭曲或核心信仰。
+      3. 提出挑战或反思：提出开放性问题，鼓励患者重新考虑或反思其初始思维或信仰。
+      4. 提供策略或见解：提供实用策略或见解，以帮助他们处理当前情况。
+      5. 鼓励与前瞻：鼓励患者使用策略，强调这只是开始，并可能需要进一步的支持。
       
-    #   ### 待改进的回复内容：
-    #   {draft_response}
+      ### 待改进的回复内容：
+      {draft_response}
       
-    #   ### 督导师的修改建议：
-    #   {revise_of_draft}
+      ### 督导师的修改建议：
+      {revise_of_draft}
       
-    #   ### 咨询者的信息如下：
-    #   {original_question_of_user}
+      ### 咨询者的信息如下：
+      {original_question_of_user}
 
 
 
-    # supervisor_prompt: &supervisor_prompt |-
-    #   ## 你正在扮演虚拟世界中一名与心理咨询师结伴的、检查「心理咨询者与心理咨询师」之间对话的{agent_name}。咨询师将会根据咨询者的信息和认知行为疗法准则，生成一段回复。你作为督导师，需要按照你自己的角色描述，针对咨询师的回复提出一些修改意见给咨询师，让咨询师根据你的修改意见，完善生成他的回复。目前，已知的信息如下：
+    supervisor_prompt: &supervisor_prompt |-
+      ## 你正在扮演虚拟世界中一名与心理咨询师结伴的、检查「心理咨询者与心理咨询师」之间对话的{agent_name}。咨询师将会根据咨询者的信息和认知行为疗法准则，生成一段回复。你作为督导师，需要按照你自己的角色描述，针对咨询师的回复提出一些修改意见给咨询师，让咨询师根据你的修改意见，完善生成他的回复。目前，已知的信息如下：
       
-    #   ### 你作为{agent_name}的角色描述：
-    #   {role_description}
+      ### 你作为{agent_name}的角色描述：
+      {role_description}
       
-    #   ### 你作为{agent_name}，看到来自患者的咨询：
-    #   {original_question_of_user}
+      ### 你作为{agent_name}，看到来自患者的咨询：
+      {original_question_of_user}
       
-    #   ### 你作为{agent_name}，看到心理咨询师针对患者的咨询生成的待修改的回复：
-    #   {draft_response}
+      ### 你作为{agent_name}，看到心理咨询师针对患者的咨询生成的待修改的回复：
+      {draft_response}
       
-    #   ## 现在，你选择了以{routing}方式与如下人物通信：
-    #   {agents}
+      ## 现在，你选择了以{routing}方式与如下人物通信：
+      {agents}
       
-    #   ##Attention##
-    #   请你以{agent_name}的身份，用【心理咨询师你好】作为你想发送的消息内容的开头，输出你想给心理咨询师的修改建议！
+      ##Attention##
+      请你以{agent_name}的身份，用【心理咨询师你好】作为你想发送的消息内容的开头，输出你想给心理咨询师的修改建议！
   name: XinHai Chatdev
 
   environment:
@@ -97,42 +97,63 @@ arena:
         max_turns: 10
         edges:
           - 0->1
+          - 1->0
       - type: chatdev
         name: LanguageChoose
         start: 0
         max_turns: 10
         edges:
-          - 0->1
+          - 0->3
+          - 3->0
       - type: chatdev
         name: Coding
-        start: 0
+        start: 3
         max_turns: 10
         edges:
-          - 0->1
+          - 3->5
+          - 5->3
       - type: chatdev
-        name: CodeCompleteAll
-        start: 0
+        name: CodeComplete
+        start: 3
         max_turns: 10
         edges:
-          - 0->1
+          - 3->5
+          - 5->3
       - type: chatdev
-        name: CodeReview
-        start: 0
+        name: CodeReviewComment
+        start: 5
         max_turns: 10
         edges:
-          - 0->1
+          - 5->6
+          - 6->5
       - type: chatdev
-        name: Test
-        start: 0
+        name: CodeReviewModification
+        start: 6
         max_turns: 10
         edges:
-          - 0->1
+          - 6->5
+          - 5->6
+      - type: chatdev
+        name: TestErrorSummary
+        start: 7
+        max_turns: 10
+        edges:
+          - 7->5
+          - 5->7
+      - type: chatdev
+        name: TestModification
+        start: 7
+        max_turns: 10
+        edges:
+          - 7->5
+          - 5->7
       - type: chatdev
         name: EnvironmentDoc
-        start: 0
+        start: 3
         max_turns: 10
         edges:
-          - 0->1
+          - 3->5
+          - 5->3
       
 
 
